1.2.38pre1: 
	- xinerama fixes
        - app-group transient window implementation 

1.2.37:
	- fix centering of transient windows over parents (Bert Wesarg)
	- check if window is allowed to be moved, before starting movement (Bert Wesarg)
	- fix key handling on buttons

1.2.36:
	- add option TaskBarFullscreenAutoShow (default = 1)

1.2.36pre2: 2008-08-17
	- regrab keyboard bindings when keyboard mapping changes

1.2.36pre1: 2008-08-07
	- fix unresponsive taskbar when PassFirstClickToClient=0
	- add support for sysfs interface (instead of proc) for battery 
          status (initial code by Santiago Garcia Mantinan)
	- fix maximized window repositioning on fullscreen toggle
	- bug 1852567 - make searching for icons more consistent (iconPath first, 
          search each directory first for all possible types - xpm, png)
	- Italian translation update
	- Korean translation update
	- translation cleanup: converted .po files to UTF-8

1.2.35: 2008-01-05
	- Application tray bug fixes
        - Add encoding/language to about dialog

1.2.34: 2007-12-27
	- fix gmplayer switching to fullscreen
	- popup dialog focus fixes
	- fix screen change with xrandr 1.2

1.2.33: 2007-11-04
	- build fixes (Bert Wesarg)
	- fix FocusOnRaise
	- tray fixes
	- fix taskbar popup in fullscreen mode

1.2.32: 2007-08-07
	- fix session shutdown when logging out (Stanislav Maslovski)
	- tweaks to taskbar auto-hide in fullscreen mode

1.2.31: 2007-07-27
	- auto-hide like taskbar activation in full screen mode
	- fix raise/lower of windows of java6 apps
	- fix iconic app startup

1.2.31pre1: 2007-05-20
	- fix crash when using battery status applet without ACPI (flitsch)
	- fix CPU status applet with long uptime
	- zh_CN translation update (LI Daobing)
	- zh_TW translation update (Wei-Lun Chao)
	- added missing ShowSettingsMenu and ShowFocusModeMenu 
          settings (Evgenii Terechkov)
	- Czech translation update
	- cross compilation fix (Lucas Correia Villa Real)