@@ -458,6 +458,7 @@ void TaskBar::initApplets() {
 #ifdef CONFIG_APPLET_APM
     if (taskBarShowApm && (access(APMDEV, 0) == 0 ||
                            access("/proc/acpi", 0) == 0 ||
+                           access("/dev/acpi", 0) == 0 ||
 	                   access("/proc/pmu", R_OK|X_OK) == 0))
     {
         fApm = new YApm(this);
